src/Javascript.java
/* Javascript.java */
/* Generated By:JavaCC: Do not edit this line. Javascript.java */
import java.io.*;
public class Javascript implements JavascriptConstants {

        public static void main(String args[]) throws ParseException{
                        try{
                InputStream in = new FileInputStream("correct.js");
                Javascript parser = new Javascript(in);
                parser.program();
                System.out.println("Successfully parsed the grammar");
                        }catch(IOException e){
                e.printStackTrace();
                    }
        }

        public static boolean isNotEndOfArray() {
        int i = 1;
        while(getToken(i).image == ","){
            i++;
        }
        return getToken(i).image != "]";
    }

  static final public void primaryExpression() throws ParseException {
    trace_call("primaryExpression");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case THIS:{
        jj_consume_token(THIS);
        break;
        }
      case IDENTIFIER_NAME:{
        jj_consume_token(IDENTIFIER_NAME);
        break;
        }
      case NULL_LITERAL:
      case BOOLEAN_LITERAL:
      case STRING_LITERAL:
      case NUMERIC_LITERAL:{
        literal();
        break;
        }
      case 55:{
        arrayLiteral();
        break;
        }
      case 59:{
        objectLiteral();
        break;
        }
      case FUNCTION:{
        functionExpression();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("primaryExpression");
    }
}

  static final public void literal() throws ParseException {
    trace_call("literal");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NULL_LITERAL:{
        jj_consume_token(NULL_LITERAL);
        break;
        }
      case BOOLEAN_LITERAL:{
        jj_consume_token(BOOLEAN_LITERAL);
        break;
        }
      case NUMERIC_LITERAL:{
        jj_consume_token(NUMERIC_LITERAL);
        break;
        }
      case STRING_LITERAL:{
        jj_consume_token(STRING_LITERAL);
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("literal");
    }
}

  static final public void arrayLiteral() throws ParseException {
    trace_call("arrayLiteral");
    try {

      jj_consume_token(55);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 57:{
        ellision();
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FUNCTION:
      case THIS:
      case NULL_LITERAL:
      case BOOLEAN_LITERAL:
      case STRING_LITERAL:
      case NUMERIC_LITERAL:
      case IDENTIFIER_NAME:
      case 55:
      case 58:
      case 59:{
        elementList();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 57:{
          ellision();
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      jj_consume_token(56);
    } finally {
      trace_return("arrayLiteral");
    }
}

  static final public void ellision() throws ParseException {
    trace_call("ellision");
    try {

      label_1:
      while (true) {
        jj_consume_token(57);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 57:{
          ;
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          break label_1;
        }
      }
    } finally {
      trace_return("ellision");
    }
}

  static final public void elementList() throws ParseException {
    trace_call("elementList");
    try {

      arrayElement();
      label_2:
      while (true) {
        if (isNotEndOfArray()) {
          ;
        } else {
          break label_2;
        }
        ellision();
        arrayElement();
      }
    } finally {
      trace_return("elementList");
    }
}

  static final public void arrayElement() throws ParseException {
    trace_call("arrayElement");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FUNCTION:
      case THIS:
      case NULL_LITERAL:
      case BOOLEAN_LITERAL:
      case STRING_LITERAL:
      case NUMERIC_LITERAL:
      case IDENTIFIER_NAME:
      case 55:
      case 59:{
        assignmentExpression();
        break;
        }
      case 58:{
        spreadElement();
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("arrayElement");
    }
}

  static final public void spreadElement() throws ParseException {
    trace_call("spreadElement");
    try {

      jj_consume_token(58);
      assignmentExpression();
    } finally {
      trace_return("spreadElement");
    }
}

  static final public void objectLiteral() throws ParseException {
    trace_call("objectLiteral");
    try {

      jj_consume_token(59);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER_NAME:{
        propertyDefinitionList();
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      jj_consume_token(60);
    } finally {
      trace_return("objectLiteral");
    }
}

  static final public void propertyDefinitionList() throws ParseException {
    trace_call("propertyDefinitionList");
    try {

      propertyDefinition();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 57:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_3;
        }
        jj_consume_token(57);
        propertyDefinition();
      }
    } finally {
      trace_return("propertyDefinitionList");
    }
}

  static final public void propertyDefinition() throws ParseException {
    trace_call("propertyDefinition");
    try {

      jj_consume_token(IDENTIFIER_NAME);
      jj_consume_token(61);
      assignmentExpression();
    } finally {
      trace_return("propertyDefinition");
    }
}

  static final public void leftSideExpression() throws ParseException {
    trace_call("leftSideExpression");
    try {

      callExpression();
    } finally {
      trace_return("leftSideExpression");
    }
}

  static final public void callExpression() throws ParseException {
    trace_call("callExpression");
    try {

      primaryExpression();
    } finally {
      trace_return("callExpression");
    }
}

  static final public void postFixExpression() throws ParseException {
    trace_call("postFixExpression");
    try {

      leftSideExpression();
    } finally {
      trace_return("postFixExpression");
    }
}

  static final public void unaryExpression() throws ParseException {
    trace_call("unaryExpression");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DELETE:{
        jj_consume_token(DELETE);
        leftSideExpression();
        break;
        }
      case FUNCTION:
      case THIS:
      case TYPEOF:
      case VOID:
      case NULL_LITERAL:
      case BOOLEAN_LITERAL:
      case STRING_LITERAL:
      case NUMERIC_LITERAL:
      case IDENTIFIER_NAME:
      case 55:
      case 59:
      case 62:
      case 63:{
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case TYPEOF:
          case VOID:
          case 62:
          case 63:{
            ;
            break;
            }
          default:
            jj_la1[9] = jj_gen;
            break label_4;
          }
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case VOID:{
            jj_consume_token(VOID);
            break;
            }
          case TYPEOF:{
            jj_consume_token(TYPEOF);
            break;
            }
          case 62:{
            jj_consume_token(62);
            break;
            }
          case 63:{
            jj_consume_token(63);
            break;
            }
          default:
            jj_la1[10] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        postFixExpression();
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("unaryExpression");
    }
}

  static final public void multiplicativeExpression() throws ParseException {
    trace_call("multiplicativeExpression");
    try {

      label_5:
      while (true) {
        if (jj_2_1(2147483647)) {
          ;
        } else {
          break label_5;
        }
        unaryExpression();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 64:{
          jj_consume_token(64);
          break;
          }
        case 65:{
          jj_consume_token(65);
          break;
          }
        case 66:{
          jj_consume_token(66);
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      unaryExpression();
    } finally {
      trace_return("multiplicativeExpression");
    }
}

  static final public void additiveExpression() throws ParseException {
    trace_call("additiveExpression");
    try {

      label_6:
      while (true) {
        if (jj_2_2(2147483647)) {
          ;
        } else {
          break label_6;
        }
        multiplicativeExpression();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 67:{
          jj_consume_token(67);
          break;
          }
        case 68:{
          jj_consume_token(68);
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      multiplicativeExpression();
    } finally {
      trace_return("additiveExpression");
    }
}

  static final public void shiftExpression() throws ParseException {
    trace_call("shiftExpression");
    try {

      label_7:
      while (true) {
        if (jj_2_3(2147483647)) {
          ;
        } else {
          break label_7;
        }
        additiveExpression();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 69:{
          jj_consume_token(69);
          break;
          }
        case 70:{
          jj_consume_token(70);
          break;
          }
        case 71:{
          jj_consume_token(71);
          break;
          }
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      additiveExpression();
    } finally {
      trace_return("shiftExpression");
    }
}

  static final public void relationalExpression() throws ParseException {
    trace_call("relationalExpression");
    try {

      label_8:
      while (true) {
        if (jj_2_4(2147483647)) {
          ;
        } else {
          break label_8;
        }
        shiftExpression();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 72:{
          jj_consume_token(72);
          break;
          }
        case 73:{
          jj_consume_token(73);
          break;
          }
        case 74:{
          jj_consume_token(74);
          break;
          }
        case 75:{
          jj_consume_token(75);
          break;
          }
        case INSTANCEOF:{
          jj_consume_token(INSTANCEOF);
          break;
          }
        case IN:{
          jj_consume_token(IN);
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      shiftExpression();
    } finally {
      trace_return("relationalExpression");
    }
}

  static final public void equalityExpression() throws ParseException {
    trace_call("equalityExpression");
    try {

      label_9:
      while (true) {
        if (jj_2_5(2147483647)) {
          ;
        } else {
          break label_9;
        }
        relationalExpression();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 76:{
          jj_consume_token(76);
          break;
          }
        case 77:{
          jj_consume_token(77);
          break;
          }
        case 78:{
          jj_consume_token(78);
          break;
          }
        case 79:{
          jj_consume_token(79);
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      relationalExpression();
    } finally {
      trace_return("equalityExpression");
    }
}

  static final public void bitwiseAndExpression() throws ParseException {
    trace_call("bitwiseAndExpression");
    try {

      label_10:
      while (true) {
        if (jj_2_6(2147483647)) {
          ;
        } else {
          break label_10;
        }
        equalityExpression();
        jj_consume_token(80);
      }
      equalityExpression();
    } finally {
      trace_return("bitwiseAndExpression");
    }
}

  static final public void bitwiseXorExpression() throws ParseException {
    trace_call("bitwiseXorExpression");
    try {

      label_11:
      while (true) {
        if (jj_2_7(2147483647)) {
          ;
        } else {
          break label_11;
        }
        bitwiseAndExpression();
        jj_consume_token(81);
      }
      bitwiseAndExpression();
    } finally {
      trace_return("bitwiseXorExpression");
    }
}

  static final public void bitwiseOrExpression() throws ParseException {
    trace_call("bitwiseOrExpression");
    try {

      label_12:
      while (true) {
        if (jj_2_8(2147483647)) {
          ;
        } else {
          break label_12;
        }
        bitwiseXorExpression();
        jj_consume_token(82);
      }
      bitwiseXorExpression();
    } finally {
      trace_return("bitwiseOrExpression");
    }
}

  static final public void logicalAndExpression() throws ParseException {
    trace_call("logicalAndExpression");
    try {

      label_13:
      while (true) {
        if (jj_2_9(2147483647)) {
          ;
        } else {
          break label_13;
        }
        bitwiseOrExpression();
        jj_consume_token(83);
      }
      bitwiseOrExpression();
    } finally {
      trace_return("logicalAndExpression");
    }
}

  static final public void logicalOrExpression() throws ParseException {
    trace_call("logicalOrExpression");
    try {

      label_14:
      while (true) {
        if (jj_2_10(2147483647)) {
          ;
        } else {
          break label_14;
        }
        logicalAndExpression();
        jj_consume_token(84);
      }
      logicalAndExpression();
    } finally {
      trace_return("logicalOrExpression");
    }
}

  static final public void conditionalExpression() throws ParseException {
    trace_call("conditionalExpression");
    try {

      logicalOrExpression();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 85:{
        jj_consume_token(85);
        assignmentExpression();
        jj_consume_token(61);
        assignmentExpression();
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        ;
      }
    } finally {
      trace_return("conditionalExpression");
    }
}

  static final public void assignmentExpression() throws ParseException {
    trace_call("assignmentExpression");
    try {

      leftSideExpression();
    } finally {
      trace_return("assignmentExpression");
    }
}

  static final public void expression() throws ParseException {
    trace_call("expression");
    try {

      assignmentExpression();
      label_15:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 57:{
          ;
          break;
          }
        default:
          jj_la1[18] = jj_gen;
          break label_15;
        }
        jj_consume_token(57);
        assignmentExpression();
      }
    } finally {
      trace_return("expression");
    }
}

  static final public void functionExpression() throws ParseException {
    trace_call("functionExpression");
    try {

      if (jj_2_11(2)) {
        namedFunction();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case FUNCTION:{
          anonymousFunction();
          break;
          }
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("functionExpression");
    }
}

  static final public void statement() throws ParseException {
    trace_call("statement");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 86:{
        emptyStatement();
        break;
        }
      case VAR:{
        variableDefinition();
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        if (jj_2_12(2147483647)) {
          block();
        } else if (jj_2_13(2147483647)) {
          labeledStatement();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case IF:{
            ifStatement();
            break;
            }
          case SWITCH:{
            switchStatement();
            break;
            }
          case DO:{
            doStatement();
            break;
            }
          case WHILE:{
            whileStatement();
            break;
            }
          case FOR:{
            forStatement();
            break;
            }
          case CONTINUE:{
            continueStatement();
            break;
            }
          case BREAK:{
            breakStatement();
            break;
            }
          case RETURN:{
            returnStatement();
            break;
            }
          case THROW:{
            throwStatement();
            break;
            }
          case TRY:{
            tryStatement();
            break;
            }
          case FUNCTION:
          case THIS:
          case NULL_LITERAL:
          case BOOLEAN_LITERAL:
          case STRING_LITERAL:
          case NUMERIC_LITERAL:
          case IDENTIFIER_NAME:
          case 55:
          case 59:{
            expressionStatement();
            break;
            }
          default:
            jj_la1[21] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } finally {
      trace_return("statement");
    }
}

  static final public void emptyStatement() throws ParseException {
    trace_call("emptyStatement");
    try {

      jj_consume_token(86);
    } finally {
      trace_return("emptyStatement");
    }
}

  static final public void expressionStatement() throws ParseException {
    trace_call("expressionStatement");
    try {

      expression();
    } finally {
      trace_return("expressionStatement");
    }
}

  static final public void variableDefinition() throws ParseException {
    trace_call("variableDefinition");
    try {

      jj_consume_token(VAR);
      variableDeclarationList();
    } finally {
      trace_return("variableDefinition");
    }
}

  static final public void variableDeclarationList() throws ParseException {
    trace_call("variableDeclarationList");
    try {

      variableDeclaration();
      label_16:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 57:{
          ;
          break;
          }
        default:
          jj_la1[22] = jj_gen;
          break label_16;
        }
        jj_consume_token(57);
        variableDeclaration();
      }
    } finally {
      trace_return("variableDeclarationList");
    }
}

  static final public void variableDeclaration() throws ParseException {
    trace_call("variableDeclaration");
    try {

      jj_consume_token(IDENTIFIER_NAME);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 87:{
        jj_consume_token(87);
        assignmentExpression();
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        ;
      }
    } finally {
      trace_return("variableDeclaration");
    }
}

  static final public void block() throws ParseException {
    trace_call("block");
    try {

      jj_consume_token(59);
      label_17:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case BREAK:
        case CONTINUE:
        case DO:
        case FOR:
        case FUNCTION:
        case IF:
        case RETURN:
        case SWITCH:
        case THIS:
        case THROW:
        case TRY:
        case VAR:
        case WHILE:
        case NULL_LITERAL:
        case BOOLEAN_LITERAL:
        case STRING_LITERAL:
        case NUMERIC_LITERAL:
        case IDENTIFIER_NAME:
        case 55:
        case 59:
        case 86:{
          ;
          break;
          }
        default:
          jj_la1[24] = jj_gen;
          break label_17;
        }
        statement();
      }
      jj_consume_token(60);
    } finally {
      trace_return("block");
    }
}

  static final public void labeledStatement() throws ParseException {
    trace_call("labeledStatement");
    try {

      jj_consume_token(IDENTIFIER_NAME);
      jj_consume_token(61);
      if (getToken(1).image != "function") {
        statement();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case FUNCTION:{
          namedFunction();
          break;
          }
        default:
          jj_la1[25] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("labeledStatement");
    }
}

  static final public void ifStatement() throws ParseException {
    trace_call("ifStatement");
    try {

      jj_consume_token(IF);
      jj_consume_token(88);
      expression();
      jj_consume_token(89);
      statement();
      if (jj_2_14(2)) {
        jj_consume_token(ELSE);
        statement();
      } else {
        ;
      }
    } finally {
      trace_return("ifStatement");
    }
}

  static final public void switchStatement() throws ParseException {
    trace_call("switchStatement");
    try {

      jj_consume_token(SWITCH);
      jj_consume_token(88);
      expression();
      jj_consume_token(89);
      caseBlock();
    } finally {
      trace_return("switchStatement");
    }
}

  static final public void caseBlock() throws ParseException {
    trace_call("caseBlock");
    try {

      jj_consume_token(59);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CASE:{
        caseClauses();
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DFLT:{
        defaultClause();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CASE:{
          caseClauses();
          break;
          }
        default:
          jj_la1[27] = jj_gen;
          ;
        }
        break;
        }
      default:
        jj_la1[28] = jj_gen;
        ;
      }
      jj_consume_token(60);
    } finally {
      trace_return("caseBlock");
    }
}

  static final public void caseClauses() throws ParseException {
    trace_call("caseClauses");
    try {

      label_18:
      while (true) {
        caseClause();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CASE:{
          ;
          break;
          }
        default:
          jj_la1[29] = jj_gen;
          break label_18;
        }
      }
    } finally {
      trace_return("caseClauses");
    }
}

  static final public void caseClause() throws ParseException {
    trace_call("caseClause");
    try {
